Bug 474999 - Dolphin Recently Closed Tab Field Blank
Summary: Dolphin Recently Closed Tab Field Blank
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.3
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-28 20:16 UTC by Philip Murray
Modified: 2023-10-04 10:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Highlighted blank field in menu. (37.69 KB, image/png)
2023-09-28 20:16 UTC, Philip Murray
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philip Murray 2023-09-28 20:16:16 UTC
Created attachment 161936 [details]
Highlighted blank field in menu.

SUMMARY
***
List of recently closed tabs shows blank boxes for tabs that were closed after a search is done in them.
***

STEPS TO REPRODUCE:
0. Optional: System settings > Appearance > Application Style > Configure icons & toolbars > Disable the 'In menus' option.
1. In Dolphin set it to show the Menubar so you see File, Edit, View Go etc.
2. Open a new tab.
3. Press the Search button.
4. Into the search field text box type in either a filename or nothing & press enter.
5. Close that tab.
6. Navigate to the Menubar: Go > Recently Closed Tabs > 
7. Notice that there are blank results boxes. If menu icons are disabled they appear as completely blank boxes, if menu icons aren't disabled they show as a magnifying glass to the left of the blank.
8. Click on the empty result box & it will reopen that search query results tab.

OBSERVED RESULT:
See #7 above.

EXPECTED RESULT:
Something other than a blank field; the directory the search is being done it (like any other closed tab shows), but with the magnifying glass next to it.

I was initially going to raise a wish-list bug suggesting for 'Reopen Closed Tab' to appear when right-clicking remaining tabs, as Firefox does, but then I found it in the Go menu, but encountered this bug - not sure if I should still raise that or not?

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux 12
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.0-11-amd64 (64-bit)
Graphics Platform: X11

Also tested on another machine with a quite fresh vanilla Debian 12 Wayland install & encountered the same result.
Comment 1 Bug Janitor Service 2023-10-03 06:01:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/622
Comment 2 Amol Godbole 2023-10-04 10:34:41 UTC
Git commit e1de6c3492c67073fdaa0e454a9c748ba0337ba6 by Amol Godbole.
Committed on 03/10/2023 at 07:44.
Pushed by meven into branch 'master'.

DolphinRecentTabsMenu: Fix blank text for closed search tab

The recently closed menu adds a blank item when a search tab is closed.
Add the search term and path to the item text.

M  +11   -1    src/dolphinrecenttabsmenu.cpp

https://invent.kde.org/system/dolphin/-/commit/e1de6c3492c67073fdaa0e454a9c748ba0337ba6