DolphinRecentTabsMenu: Fix blank text for closed search tab

The recently closed menu adds a blank item when a search tab is closed.
Add the search term and path to the item text.

BUG: 474999